# short-url

./: .dockerignore  .editorconfig  .env.dev  .gitignore  Dockerfile.dev  Dockerfile.prod  LICENSE  Makefile  README.md  compose.dev.yml  compose.prod.yml  dev.dockerfile  entrypoint.sh  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
short_url/: settings.py  tests.py  urls.py  views.py
short_url/api/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
short_url/api/migrations/: 0001_initial.py
short_url/fixtures/: links.json  users.json
short_url/links/: admin.py  apps.py  models.py  serializers.py  tests.py  utils.py  views.py
short_url/links/migrations/: 0001_initial.py
short_url/templates/: redoc.html
short_url/users/: apps.py  serializers.py  tests.py  views.py
