[tool.poetry]
name = "short-url"
version = "0.1.0"
description = "API service for URL shortening"
authors = ["stigsanek <stigsanek@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "short_url"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
